[gd_scene load_steps=44 format=3 uid="uid://cnenfhwg7u54b"]

[ext_resource type="PackedScene" uid="uid://b6o6lg5rvy3ya" path="res://2D/character/people.tscn" id="1_51myt"]
[ext_resource type="Script" path="res://2D/script/character/npc.gd" id="2_u47h8"]
[ext_resource type="PackedScene" uid="uid://dh6fsitjrhvx1" path="res://2D/ui/panel.tscn" id="3_sfaxh"]
[ext_resource type="AnimationLibrary" uid="uid://cwc8vfxaxrjja" path="res://tres/npc_anim.res" id="3_sxmyd"]
[ext_resource type="Script" path="res://2D/script/states/NPC/NPC_Idle.gd" id="4_bq265"]
[ext_resource type="Script" path="res://2D/script/states/NPC/NPCWalk.gd" id="5_35jsi"]
[ext_resource type="Script" path="res://2D/script/states/NPC/NPCFind.gd" id="6_it0eg"]
[ext_resource type="Script" path="res://2D/script/states/NPC/NPCAttack.gd" id="6_qotwm"]
[ext_resource type="PackedScene" uid="uid://elc4dl67vyrs" path="res://expression.tscn" id="8_4ujr2"]
[ext_resource type="Script" path="res://2D/script/states/NPC/NPCDeath.gd" id="8_t63qt"]
[ext_resource type="AudioStream" uid="uid://ly18gkas47pe" path="res://assets/audio/attack/people.mp3" id="8_vufe6"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_xy6mk"]
height = 20.0

[sub_resource type="Animation" id="Animation_bdtnr"]
length = 0.001
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [5]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Areaes/Interact:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 23)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:offset")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Areaes/HitBox/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Areaes/HitBox/CollisionShape2D:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 20)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_3xh4g"]
_data = {
"RESET": SubResource("Animation_bdtnr")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_pg8ih"]
animation = &"npc_anim/attack_down"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_41rhd"]
animation = &"npc_anim/attack_up"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_j3xtq"]
animation = &"npc_anim/attack_left"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_e8cak"]
animation = &"npc_anim/attack_right"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_yam6q"]
blend_point_0/node = SubResource("AnimationNodeAnimation_pg8ih")
blend_point_0/pos = Vector2(0, 1)
blend_point_1/node = SubResource("AnimationNodeAnimation_41rhd")
blend_point_1/pos = Vector2(0, -1)
blend_point_2/node = SubResource("AnimationNodeAnimation_j3xtq")
blend_point_2/pos = Vector2(-1, 0)
blend_point_3/node = SubResource("AnimationNodeAnimation_e8cak")
blend_point_3/pos = Vector2(1, 0)
blend_mode = 1

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_jxar4"]

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_btms5"]
animation = &"npc_anim/idle_down"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_ai5me"]
animation = &"npc_anim/idle_up"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_k2xmc"]
animation = &"npc_anim/idle_right"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_t51vf"]
animation = &"npc_anim/idle_left"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_p8kxm"]
blend_point_0/node = SubResource("AnimationNodeAnimation_btms5")
blend_point_0/pos = Vector2(0, 1)
blend_point_1/node = SubResource("AnimationNodeAnimation_ai5me")
blend_point_1/pos = Vector2(0, -1)
blend_point_2/node = SubResource("AnimationNodeAnimation_k2xmc")
blend_point_2/pos = Vector2(1, 0)
blend_point_3/node = SubResource("AnimationNodeAnimation_t51vf")
blend_point_3/pos = Vector2(-1, 0)
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_fhaiq"]
animation = &"npc_anim/walk_down"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_fb6xt"]
animation = &"npc_anim/walk_up"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_gqx5q"]
animation = &"npc_anim/walk_right"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_sfcbu"]
animation = &"npc_anim/walk_left"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_1bpia"]
blend_point_0/node = SubResource("AnimationNodeAnimation_fhaiq")
blend_point_0/pos = Vector2(0, 1)
blend_point_1/node = SubResource("AnimationNodeAnimation_fb6xt")
blend_point_1/pos = Vector2(0, -1)
blend_point_2/node = SubResource("AnimationNodeAnimation_gqx5q")
blend_point_2/pos = Vector2(1, 0)
blend_point_3/node = SubResource("AnimationNodeAnimation_sfcbu")
blend_point_3/pos = Vector2(-1, 0)
blend_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_2blq7"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_ip38p"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_42x37"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_lgeqv"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_cgtyr"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_6vxsi"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_8hn2l"]

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_qqgy2"]
states/Attack/node = SubResource("AnimationNodeBlendSpace2D_yam6q")
states/Attack/position = Vector2(507, 247.617)
states/Death/node = SubResource("AnimationNodeBlendSpace2D_jxar4")
states/Death/position = Vector2(723, 100)
states/Idle/node = SubResource("AnimationNodeBlendSpace2D_p8kxm")
states/Idle/position = Vector2(358, 100)
states/Walk/node = SubResource("AnimationNodeBlendSpace2D_1bpia")
states/Walk/position = Vector2(507, -45)
transitions = ["Start", "Idle", SubResource("AnimationNodeStateMachineTransition_2blq7"), "Idle", "Walk", SubResource("AnimationNodeStateMachineTransition_ip38p"), "Walk", "Idle", SubResource("AnimationNodeStateMachineTransition_42x37"), "Idle", "Attack", SubResource("AnimationNodeStateMachineTransition_lgeqv"), "Attack", "Idle", SubResource("AnimationNodeStateMachineTransition_cgtyr"), "Walk", "Attack", SubResource("AnimationNodeStateMachineTransition_6vxsi"), "Attack", "Walk", SubResource("AnimationNodeStateMachineTransition_8hn2l")]
graph_offset = Vector2(0, -86.3834)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_dhdi5"]
radius = 12.0

[sub_resource type="CircleShape2D" id="CircleShape2D_gahnp"]
radius = 21.0

[sub_resource type="CircleShape2D" id="CircleShape2D_l3lgi"]
radius = 20.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_pw2yp"]
radius = 16.0
height = 32.0

[sub_resource type="CircleShape2D" id="CircleShape2D_bvxh5"]
radius = 200.0

[node name="NPC" instance=ExtResource("1_51myt")]
script = ExtResource("2_u47h8")

[node name="Sprite2D" parent="." index="0"]
position = Vector2(0, -20)
frame = 5

[node name="CollisionShape2D" parent="." index="1"]
position = Vector2(0, -8)
shape = SubResource("CapsuleShape2D_xy6mk")

[node name="AnimationPlayer" parent="." index="2"]
libraries = {
"": SubResource("AnimationLibrary_3xh4g"),
"npc_anim": ExtResource("3_sxmyd")
}

[node name="AnimationTree" parent="." index="3"]
tree_root = SubResource("AnimationNodeStateMachine_qqgy2")
parameters/Death/blend_position = Vector2(0, 0)
parameters/Walk/blend_position = Vector2(-0.99523, -0.0319149)

[node name="Bar" parent="." index="4"]
position = Vector2(-5, -50)

[node name="HBoxContainer" parent="Bar" index="0"]
custom_minimum_size = Vector2(45, 0)
offset_left = -15.0
offset_top = -6.0
offset_right = 24.0
offset_bottom = 6.0

[node name="Find" type="Node" parent="StateMachine" index="0"]
script = ExtResource("6_it0eg")

[node name="Idle" parent="StateMachine" index="1"]
script = ExtResource("4_bq265")

[node name="Walk" parent="StateMachine" index="2"]
script = ExtResource("5_35jsi")

[node name="Attack" parent="StateMachine" index="3"]
script = ExtResource("6_qotwm")

[node name="Death" parent="StateMachine" index="4"]
script = ExtResource("8_t63qt")

[node name="Areaes" parent="." index="6"]
position = Vector2(0, -20)

[node name="HurtBox" parent="Areaes" index="0"]
position = Vector2(0, 5)

[node name="CollisionShape2D" parent="Areaes/HurtBox" index="0"]
shape = SubResource("CapsuleShape2D_dhdi5")

[node name="CollisionShape2D" parent="Areaes/HitBox" index="0"]
position = Vector2(0, 20)
shape = SubResource("CircleShape2D_gahnp")
disabled = true

[node name="Interact" parent="Areaes" index="2"]
position = Vector2(0, 23)

[node name="CollisionShape2D" parent="Areaes/Interact" index="0"]
shape = SubResource("CircleShape2D_l3lgi")

[node name="Interactable" parent="Areaes" index="3"]
position = Vector2(0, 5)

[node name="CollisionShape2D" parent="Areaes/Interactable" index="0"]
shape = SubResource("CapsuleShape2D_pw2yp")

[node name="Find" type="Area2D" parent="Areaes" index="4"]
collision_layer = 4
collision_mask = 95

[node name="CollisionShape2D" type="CollisionShape2D" parent="Areaes/Find" index="0"]
shape = SubResource("CircleShape2D_bvxh5")

[node name="Arrow" parent="Audios" index="0"]
volume_db = -5.0

[node name="Attack" type="AudioStreamPlayer2D" parent="Audios" index="2"]
stream = ExtResource("8_vufe6")
volume_db = 7.0
max_distance = 300.0
bus = &"SFX"

[node name="Panel" parent="." index="8" instance=ExtResource("3_sfaxh")]
visible = false
z_index = 90
offset_left = 30.0
offset_top = -70.0
offset_right = 100.0
offset_bottom = 43.0

[node name="Expression" parent="." index="9" instance=ExtResource("8_4ujr2")]
visible = false
z_index = 99
offset_left = 6.0
offset_top = -70.0
offset_right = 38.0
offset_bottom = -22.0

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="." index="10"]
target_desired_distance = 25.0
avoidance_layers = 6
avoidance_mask = 15

[node name="LogicTimer" type="Timer" parent="." index="12"]
wait_time = 1.5
autostart = true

[connection signal="input_event" from="Areaes/Interactable" to="." method="_on_interactable_input_event"]
[connection signal="area_entered" from="Areaes/Find" to="." method="_on_find_area_entered"]
[connection signal="area_exited" from="Areaes/Find" to="." method="_on_find_area_exited"]
[connection signal="timeout" from="LogicTimer" to="." method="_on_logic_timer_timeout"]

[editable path="Areaes/HurtBox"]
[editable path="Areaes/HitBox"]
[editable path="Panel"]
